# Matisse

./: .gitignore  BUILD.md  Doc_Utilisateur_Mosaiques_Matisse.doc  Matisse.Doxyfile  Matisse.pro  README.md  README.txt  assembly.xml  install_matisse_deps.sh  pom.xml  translatebuild.sh
Src/: .gitignore  .qmake.conf  .qmake.stash  CMakeLists.txt  MatisseConfig.h.in  MatisseProject.pro  MatisseProject.pro.user.ifremer.linux
Src/Libraries/: CMakeLists.txt  Libraries.pro  Libraries.pro.user.3.2-pre1  Makefile.Libraries
Src/Libraries/BasicProcessing/: BasicProcessing.pro  CMakeLists.txt  Polygon.cpp  Polygon.h  gpc.cpp  gpc.h  stdvectoperations.cpp  stdvectoperations.h
Src/Libraries/FTPClient/: CMakeLists.txt  qftpclient.cpp  qftpclient.h  threadable_ftpclient.cpp  threadable_ftpclient.h
Src/Libraries/ImageProcessing/: CMakeLists.txt  ImageProcessing.pro  imageprocessing.cpp  imageprocessing.h  imageprocessing_global.h  preprocessing_correction.cpp  preprocessing_correction.h
Src/Libraries/MatisseCommon/: CMakeLists.txt  MatisseCommon.pro
Src/Libraries/MatisseCore/: CMakeLists.txt  Context.h  JobDefinition.h  JobServer.cpp  LifecycleComponent.cpp  MatisseEngine.cpp  MatisseEngine.h  MatisseTools_en.ts  ProcessDataManager.h  RasterProvider.cpp  RasterProvider.h  SystemDataManager.h  assembly_definition.cpp  assembly_definition.h  input_data_provider.cpp  input_data_provider.h  job_definition.cpp  job_definition.h  job_server.cpp  job_server.h  key_value_list.cpp  key_value_list.h  lifecycle_component.cpp  lifecycle_component.h  matisse_engine.cpp  matisse_engine.h  matisse_preferences.cpp  matisse_preferences.h  matisse_remote_server_settings.cpp  matisse_remote_server_settings.h  output_data_writer.cpp  output_data_writer.h  process_data_manager.cpp  process_data_manager.h  processor.cpp  processor.h  reconstruction_context.h  system_data_manager.cpp  system_data_manager.h
Src/Libraries/MatisseImage/: CMakeLists.txt  FileImage.h  file_image.cpp  file_image.h  image.cpp  image.h  image_listener.cpp  image_listener.h  image_set.cpp  image_set.h  input_source.h  nav_image.cpp  nav_image.h  nav_info.cpp  nav_info.h  picture_file_set.cpp  picture_file_set.h
Src/Libraries/MatisseTools/: CMakeLists.txt  MatisseTools.pro  MatisseTools_en.qm  MatisseTools_en.ts  MatisseTools_fr.qm  MatisseTools_fr.ts  ui_ChooseAndShow.h  ui_ParametersWidgetSkeleton.h
Src/Libraries/NavTools/: CMakeLists.txt  Dim2FileReader.h  carto_image.cpp  carto_image.h  dim2.cpp  dim2.h  dim2_file_reader.cpp  dim2_file_reader.h  gdal_translate_wrapper.cpp  gdal_translate_wrapper.h  geo_transform.cpp  geo_transform.h  nav_commons.h  raster_georeferencer.cpp  raster_georeferencer.h
Src/Libraries/NetworkTools/: CMakeLists.txt  NetworkAction.h  QSshClient.h  SshClient.cpp  SshClient.h  SshCommandPbsQsub.cpp  basic_connection_wrapper.cpp  basic_connection_wrapper.h  connection_wrapper.cpp  connection_wrapper.h  network_action.cpp  network_action.h  network_action_dir_content.cpp  network_action_dir_content.h  network_action_download_dir.cpp  network_action_download_dir.h  network_action_file_transfer.cpp  network_action_file_transfer.h  network_action_manager.cpp  network_action_manager.h  network_action_send_command.cpp  network_action_send_command.h  network_action_shell.cpp  network_action_shell.h  network_action_upload_dir.cpp  network_action_upload_dir.h  network_action_upload_file.cpp  network_action_upload_file.h  network_client.cpp  network_client.h  network_client_file_transfer.cpp  network_client_file_transfer.h  network_client_shell.cpp  network_client_shell.h  network_command.cpp  network_command.h  network_command_action.cpp  network_command_action.h  network_command_client.cpp  network_command_client.h  (+26 more)
Src/Libraries/OpticalMapping/: CMakeLists.txt  FileImgExposureCompensate.cpp  FileImgExposureCompensate.h  MosaicDescriptor.cpp  MosaicDescriptor.h  MosaicDrawer.cpp  MosaicDrawer.h  MosaicDrawer_old.cpp  MosaicOptimizer.cpp  MosaicOptimizer.h  OpticalMapping.pro  ProjectiveCamera.cpp  ProjectiveCamera.h  file_img_exposure_compensate.cpp  file_img_exposure_compensate.h  file_img_precomp.hpp  fileimage_exposure_compensate.cpp  fileimage_exposure_compensate.h  fileimage_precomp.hpp  libopticalmapping_global.h  mosaic_descriptor.cpp  mosaic_descriptor.h  mosaic_drawer.cpp  mosaic_drawer.h  projective_camera.cpp  projective_camera.h
Src/Libraries/SiftGPU/: CMakeLists.txt  GPUSift_Image_Describer.hpp  GPUSift_Image_Describer_io.hpp
Src/Libraries/SystemTools/: CMakeLists.txt  FileUtils.cpp  FileUtils.h  PlatformComparator.cpp  PlatformComparisonStatus.cpp  PlatformComparisonStatus.h  PlatformComponent.cpp  PlatformDump.h  PlatformInspector.h  PlatformOpencvComponent.cpp  PlatformOsgComponent.h  PlatformQgisComponent.h  file_utils.cpp  file_utils.h  platform_comparator.cpp  platform_comparator.h  platform_comparison_status.cpp  platform_comparison_status.h  platform_component.cpp  platform_component.h  (+10 more)
Src/MatisseCmd/: CMakeLists.txt  MatisseCmd.pro
Src/MatisseCore/: CMakeLists.txt
Src/MatisseGui/: AboutDialog.h  AboutWebView.h  AssemblyGui.cpp  AssemblyGui.h  AssemblyGui.ui  CMakeLists.txt  WelcomeDialog.cpp  WelcomeDialog.h  about_dialog.cpp  about_dialog.h  about_dialog.ui  icons.qrc  main.cpp  main_gui.cpp  main_gui.h  main_gui.ui  welcome_dialog.cpp  welcome_dialog.h  welcome_dialog.ui
Src/MatisseHeadless/: CMakeLists.txt  JobLauncher.cpp  JobLauncher.h  job_launcher.cpp  job_launcher.h  main.cpp
Src/MatisseServer/: CMakeLists.txt  MatisseServer.aps  MatisseServer.pro  MatisseServer.rc  MatisseServer_en.qm  MatisseServer_en.ts  MatisseServer_fr.qm  MatisseServer_fr.ts  cartoscene.cpp  cartoscene.h  icons.qrc
Src/Modules/: .gitignore  CMakeLists.txt  Modules.pro
Src/Scripts/: BasicProcessing.pri  Deploy.pro  Deploy_Debug.pro  Deploy_Release.pro  ImageProcessing.pri  MatisseCommon.pri  MatisseTools.pri  OpenSceneGraph.pri  OpticalMapping.pri  ProtoBuf.pri  QuaZIP.pri  libsOpenCVAddLibrary.pri  opencv.pri  qgis.pri
Src/Tests/: Tests.pro
Src/Tools/: CMakeLists.txt  Tools.pro
(+1602 files in other folders)
