add_subdirectory(DTPictureFileSetImageProvider)
#add_subdirectory(RTPictureFileSetImageProvider)
add_subdirectory(Flusher)
add_subdirectory(Init2DMosaic)
add_subdirectory(DrawBlend2DMosaic)
#add_subdirectory(GeoTiffImageWriter)
add_subdirectory(ReconstructionLister)
add_subdirectory(BridgeModule)
add_subdirectory(Init3DRecon)
add_subdirectory(Matching3D)
add_subdirectory(SfmBundleAdjustment)
add_subdirectory(Meshing3D)
add_subdirectory(PointCloudDensify)
add_subdirectory(Texturing3D)